examples/tests/valid/statements_if.w
if true {
  let x = 2;
}