examples/tests/invalid/statements_if.w
let n = 0;

if !n {}
if !n || true {}
